# Nomad-server

./: Dockerfile  README.md  TEST_PLAN.md  TRANSACTION_FEATURES_ADDED.md  app-store.json  build-docker.ps1  push-docker.ps1
app/server/: Cargo.toml  README.md
app/server/src/: electrs.rs  error.rs  identity.rs  lib.rs  main.rs  nostr.rs  nostr_handler.rs  pairing.rs  protocol.rs  qr.rs
app/ui/: README.md
docker/: README.md
protocol/: README.md
umbrel/: app.yml
