[package]
name = "balancebridge-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "balancebridge-server"
path = "src/main.rs"

[dependencies]
# Nostr
nostr-sdk = "0.44"
nostr = "0.44"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR code generation
qrcode = "=0.12.0"

# Bitcoin address and xpub handling
bitcoin = { version = "0.32", features = ["std", "base64"] }
bip32 = "0.5"

# HTTP client for Electrs
reqwest = { version = "0.12", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]

